  * Documentation:
    - Fix grammar in dpkg-architecture(1).
      Thanks to Chris Lamb <lamby@debian.org>. Closes: #787616
    - Use the feature area name in the dpkg-buildflags(1) subsection title.
    - Document DPKG_HOOK_ACTION also in dpkg(1) ENVIRONMENT section.
    - Clarify when some features where added in man pages.

  [ Updated programs translations ]
  * Dutch (Frans Spiesschaert). Closes: #789097
  * Simplified Chinese (Zhou Mo). Closes: #787986
  * Turkish (Mert Dirik). Closes: #788211
  * Vietnamese (Trần Ngọc Quân).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

  [ Updated dselect translations ]
  * Dutch (Frans Spiesschaert). Closes: #789096

 -- Guillem Jover <guillem@debian.org>  Sat, 30 May 2015 03:18:43 +0200

dpkg (1.18.1) unstable; urgency=low

  [ Guillem Jover ]
  * Cast c_isbits() c argument to an unsigned char when indexing the array.
    This fixes build failures on armel, armhf, ppc64el and s390x.
  * Do not allow pathnames with embedded newlines in dpkg-deb and dpkg.
    Closes: #720761
  * Fix setting the SE Linux context when a file has a statoverride.
    Closes: #786435
  * Set the SE Linux file context even when the file mode has no file type.
  * Make dpkg-buildpackage -j override any parallel option specified in
    DEB_BUILD_OPTIONS. Regression introduced in dpkg 1.14.15.
  * Honor Pre-Depends, Conflicts and Breaks for packages in unpacked and
    half states. Thanks to Ian Jackson <iwj@ubuntu.com>. Closes: #377860
  * Fix build failure on FreeBSD by actually using libmd if available.
  * Sort dpkg-scanpackages output by package name and version.
    Thanks to Maximilian Schwerin <maximilian.schwerin@tigris.de>.
  * Sort dpkg-scansources output by package name and version.
    Thanks to Maximilian Schwerin <maximilian.schwerin@tigris.de>.
  * Set the correct default compression value in dpkg-deb for control.tar.gz
    member. This meant using compression level 1 when using the zlib shared