@@ -308,6 +308,16 @@ to deinstall any packages not in list given to \fB\-\-set\-selections\fP.
 Searches for packages selected for installation, but which for some
 reason still haven't been installed.
 .TP
+.B \-\-predep\-packages
+Print a single package which, is the target of one or more relevant
+pre-dependencies, and has itself no unsatisfied pre-dependencies.
+.IP
+If such a package is present, output it as a Packages file entry,
+which can be massaged as appropriate.
+.IP
+Returns 0 when a package is printed, 1 when no suitable package is
+available and 2 on error.
+.TP
 .B \-\-add\-architecture \fIarchitecture\fP
 Add \fIarchitecture\fP to the list of architectures for which packages can
 be installed without using \fB\-\-force\-architecture\fP (since dpkg 1.16.2).
@@ -330,6 +340,32 @@ Print architecture of packages \fBdpkg\fP installs (for example, \(lqi386\(rq).
 .B \-\-print\-foreign\-architectures
 Print a newline-separated list of the extra architectures \fBdpkg\fP is
 configured to allow packages to be installed for (since dpkg 1.16.2).
+.TP
+.BI \-\-assert\- feature
+Asserts that \fBdpkg\fP supports the requested feature.
+Returns 0 if the feature is fully supported, 1 if the feature is known but
+\fBdpkg\fP cannot provide support for it yet, and 2 if the feature is unknown.
+The current list of assertable features is:
+.RS
+.TP
+.B support\-predepends
+Supports the \fBPre\-Depends\fP field (since dpkg 1.1.0).
+.TP
+.B working\-epoch
+Supports epochs in version strings (since dpkg 1.4.0.7).
+.TP
+.B long\-filenames
+Supports long filenames in \fBdeb\fP(5) archives (since dpkg 1.4.1.17).
+.TP
+.B multi\-conrep
+Supports multiple \fBConflicts\fP and \fBReplaces\fP (since dpkg 1.4.1.19).
+.TP
+.B multi\-arch
+Supports multi-arch fields and semantics (since dpkg 1.16.2).
+.TP
+.B versioned\-provides
+Supports versioned \fBProvides\fP (since dpkg 1.17.11).
+.RE
 .TP
 .B \-\-compare\-versions \fIver1 op ver2\fP
 Compare version numbers, where \fIop\fP is a binary operator. \fBdpkg\fP
