@@ -8,6 +8,8 @@ dpkg (1.18.2) UNRELEASED; urgency=low
     - Use the feature area name in the dpkg-buildflags(1) subsection title.
     - Document DPKG_HOOK_ACTION also in dpkg(1) ENVIRONMENT section.
     - Clarify when some features where added in man pages.
+    - Document --yet-to-unpack, --predep-packages and all --assert-<feature>
+      commands as supported in both «dpkg --help» and dpkg(1).
 
   [ Updated programs translations ]
   * Dutch (Frans Spiesschaert). Closes: #789097
